# carnet-note

./: README.md
carnet-back/: .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  uml.mmd
carnet-back/src/: config.py  database.py  main.py  utils.py
carnet-back/src/models/: __init__.py  db_models.py  schemas.py
carnet-front/: .gitignore  README.md  deploy.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
carnet-front/src/: App.vue  main.ts  styles.css
carnet-front/src/api/: axios.ts
carnet-front/src/components/: ListCarnet.vue  NavBar.vue
carnet-front/src/composables/: useAuth.ts  utils.ts
carnet-front/src/models/: carnet.ts  user.ts
carnet-front/src/router/: index.ts
carnet-front/src/views/: 404View.vue  AuthView.vue  HomeView.vue  ProfilView.vue
